# transformers

./: pyproject.toml
notebooks/: decoder_only_gpt.ipynb
src/transformers/: __init__.py  modules.py  transformer_blocks.py
src/transformers /: transformer_blocks.py
