[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "tokenmonster>=1.1.12",
    "torch>=2.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transformers"]
